--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
-markdown: rdiscount
-root_url: http://www.flipcamp.org/engagingstudents2
+markdown: redcarpet
+baseurl: http://www.flipcamp.org/engagingstudents2
+url: http://www.flipcamp.org/engagingstudents2
