--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 markdown: redcarpet
-baseurl: http://www.flipcamp.org/engagingstudents2
+baseurl: http://www.flipcamp.org
+project: /engagingstudents2
 url: http://www.flipcamp.org/engagingstudents2
