--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
 markdown: redcarpet
-baseurl: http://www.flipcamp.org
-project: /engagingstudents2
+baseurl: http://www.flipcamp.org/engagingstudents2
 url: http://www.flipcamp.org/engagingstudents2
