--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-markdown: redcarpet
+markdown: kramdown
 baseurl: http://www.flipcamp.org/engagingstudents2
 url: http://www.flipcamp.org/engagingstudents2
