--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 markdown: kramdown
-baseurl: https://lguariento.github.io/engagingstudents2
-url: https://lguariento.github.io/engagingstudents2
+baseurl: https://lguariento.github.io/engineering_new
+url: https://lguariento.github.io/engineering_new
