--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 markdown: kramdown
-baseurl: http://www.flipcamp.org/engagingstudents2
-url: http://www.flipcamp.org/engagingstudents2
+baseurl: https://www.flipcamp.org/engagingstudents2
+url: https://www.flipcamp.org/engagingstudents2
